--- a/tresciclajeapp/app/assets/stylesheets/home.scss
+++ b/tresciclajeapp/app/assets/stylesheets/home.scss
@@ -136,7 +136,9 @@ hr.style15:after {
   box-shadow: inset 0 0 0 3px #54d500;
 }
 .contac{
-  background-color: #58d000;
+ background-color: #58d000;
+  width: 100%;
+  margin-left: 0%;
 }
 p.large {
 
